--- a/test/deposit_widget/index.html
+++ b/test/deposit_widget/index.html
@@ -99,20 +99,28 @@
 									</div>
 									<div data-uib-collapse="isCollapsedAvailableFields">
 										<div class="panel-body">
-											<div class="form-group form-group-sm">
-												<div class="col-sm-12">
-													<div class="list-group">
-														<div class="list-group-item" data-ng-repeat="aField in allFieldsOptionsArray | filter: FilterAvailableFields | orderBy: ['allowMultiples']">
-															<div class="pull-right">
-																<span class="small text-danger" data-ng-show="!!aField.isLTRequired &amp;&amp; !aField.isIncluded">Required! &nbsp; </span>
-																<span class="small" data-ng-show="!aField.allowMultiples &amp;&amp; !!aField.isIncluded">Can only add once</span>
-																<a class="btn btn-default btn-xs btn-tool field-channel" data-jqyoui-draggable="{onStart:'onDragStart({field:\'{{aField.id}}\'})'}" data-jqyoui-options="{revert: 'invalid', helper: 'clone'}" data-drag="true" data-ng-show="showAddBtns = aField.allowMultiples || !aField.isIncluded"><span class="glyphicon glyphicon-move"></span></a>
-																<button class="btn btn-default btn-xs" type="button" data-ng-click="addField(aField.id);" data-ng-show="showAddBtns"><span class="glyphicon glyphicon-plus"></span></button>
-															</div>
-															<span data-ng-bind="aField.name"></span>
-														</div>
+											<div class="list-group lt-no-bottom-margin">
+												<div class="list-group-item" data-ng-repeat="aField in allFieldsOptionsArray | filter: FilterAvailableFields | orderBy: ['allowMultiples']">
+													<div class="pull-right">
+														<span class="small text-danger" data-ng-show="!!aField.isLTRequired &amp;&amp; !aField.isIncluded">Required! &nbsp; </span>
+														<span class="small" data-ng-show="!aField.allowMultiples &amp;&amp; !!aField.isIncluded">Can only add once</span>
+														<a class="btn btn-default btn-xs btn-tool field-channel" data-jqyoui-draggable="{onStart:'onDragStart({field:\'{{aField.id}}\'})'}" data-jqyoui-options="{revert: 'invalid', helper: 'clone'}" data-drag="true" data-ng-show="showAddBtns = aField.allowMultiples || !aField.isIncluded"><span class="glyphicon glyphicon-move"></span></a>
+														<button class="btn btn-default btn-xs" type="button" data-ng-click="addField(aField.id);" data-ng-show="showAddBtns"><span class="glyphicon glyphicon-plus"></span></button>
 													</div>
+													<span data-ng-bind="aField.name"></span>
 												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="panel panel-default">
+									<div class="panel-heading" data-ng-click="isCollapsedAvailResultFields = !isCollapsedAvailResultFields">
+										<h3 class="panel-title">Result Fields<span class="glyphicon pull-right" data-ng-class="isCollapsedAvailResultFields &amp;&amp; 'glyphicon-chevron-right' || 'glyphicon-chevron-down'"></span></h3>
+									</div>
+									<div data-uib-collapse="isCollapsedAvailResultFields">
+										<div class="panel-body">
+											<div class="list-group lt-no-bottom-margin">
+												<div class="list-group-item">field list item</div>
 											</div>
 										</div>
 									</div>
