--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -1,5 +1,4 @@
 <style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="/Areas/Widgets/Content/widget.css"> <link rel="stylesheet" href="/Areas/Widgets/Content/lt-captcha.css">
-<style type="text/css"> .ltwF, .ltwR { width: 50%; } </style>
 <div id="ltWidgetWrapper"></div>
 <div id="ltWidgetResultWrapper"></div>
 <script type="text/javascript" src="/Scripts/lib/jquery-1/jquery.min.js"></script> <script type="text/javascript" src="/Scripts/lib/jquery/jquery.placeholder.min.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/contact.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/lt-captcha.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/widget-helpers.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget.js"></script> <script type="text/javascript">
@@ -13,6 +12,7 @@
 	var ltwbo = {
 		"panelTitle": "Deposit Rates",
 		formBorderType: 'well',
+		formWidth: 50,
 		fieldSize: 'sm',
 		"fields": [{
 			"field": "depositterm", cols: 6, value: 3
