edit of fields inside repeat field working

--- a/template.html
+++ b/template.html
@@ -11,6 +11,12 @@
 					</div>
 					<div class="form-group">
 						<div class="col-sm-12">
+							TODO:
+							<ul>
+								<li>update fieldEdit template so that it can handle 'div'</li>
+								<li>get drag/drop working</li>
+								<li>get side panel with availableFields working</li>
+							</ul>
 							<div class="pull-right">
 								<button class="btn btn-default btn-xs" type="button" data-ng-click="editDataForm();"><span class="glyphicon glyphicon-edit"></span> Edit</button>
 							</div>
@@ -22,7 +28,7 @@
 						</div>
 						<div class="col-sm-9">
 							<style type="text/css">{{previewDataFieldStyles}}</style>
-							<div class="ltw ltw-repeatpreview" data-lt-compile-code="repeatFormDisplay"></div>
+							<div class="ltw ltw-repeatpreview ltw-builder-tools" data-lt-compile-code="repeatFormDisplay"></div>
 						</div>
 					</div>
 				</div>
