allow input fields to have Default Value preview should include background color of form allow editForm to change default font color for form submit form should be disabled on submit (include spinner) display "Sorry, no results" if no data is passed on Save/SaveNew allow it to stay on page

--- a/test/deposit_widget/index.html
+++ b/test/deposit_widget/index.html
@@ -190,6 +190,7 @@
 	<script type="text/javascript" src="/Scripts/common/ng/directives.js"></script>
 
 	<script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/contact.js"></script>
+	<script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/deposit.js"></script>
 	<script type="text/javascript" src="/Areas/Widgets/Scripts/common/widget-helpers.js"></script>
 	<script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget-builder-helpers.js"></script>
 	<script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget-builder-templates.js"></script>
