started using unique IDs and var names

--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -1,55 +1,1 @@
-<style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="/Areas/Widgets/Content/widget.css"> <link rel="stylesheet" href="/Areas/Widgets/Content/lt-captcha.css">
-<div id="ltWidgetWrapper"></div>
-<div id="ltWidgetResultWrapper"></div>
-<script type="text/javascript" src="/Scripts/lib/jquery-1/jquery.min.js"></script> <script type="text/javascript" src="/Scripts/lib/jquery/jquery.placeholder.min.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/contact.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/lt-captcha.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/widget-helpers.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget.js"></script> <script type="text/javascript">
-(function() {
-	var ltjq = ltjq || jQuery.noConflict(true);
-	var lthlpr = new LoanTekWidget.helpers(ltjq);
-	var pdfun = function() { /*code ran after DOM created*/ };
-	var ev = function() {
-		return true;
-	};
-	var ltwbo = {
-		"panelTitle": "Deposit Rates",
-		formBorderType: 'well',
-		formWidth: 50,
-		fieldSize: 'sm',
-		"fields": [{
-			"field": "depositterm", cols: 6, value: 3
-		}, {
-			"field": "depositamount", cols: 6, value: 4999
-		}, {
-			"field": "submit"
-		}],
-		"widgetType": "deposit",
-		"postDOMCallback": pdfun
-	};
-	var ltwo = {
-		// "postUrl": "https://api.loantek.com/DEPOSIT-WIDGET-SUBMIT-URL-GOES-HERE",
-		"postUrl": "/test/deposit_widget/test-response.json",
-		"externalValidatorFunction": ev,
-		"clientId": 5,
-		"userId": 1940,
-		resultDisplayOptions: {
-			widgetType: 'deposit',
-			formBorderType: 'panel',
-			fieldSize: 'sm',
-			panelTitle: 'my results panel title',
-			fields: [
-				{field: 'title', value: 'Deposit List'},
-				{field: 'paragraph', value: 'explanation goes here if needed'},
-				{field: 'depositdatalist', fieldListOptions: {
-					formBorderType: 'panel',
-					fields: [
-						{field: 'paragraph', value: 'repeater paragraph'},
-						{field: 'api', cols: 4, value: '#{APY}% is #{APY}'},
-						{field: 'totalinterestearned', cols: 4},
-						{field: 'amountplusinterest', cols: 4}
-					]
-				}}
-			]
-		}
-	};
-	var ltwfb = new LoanTekWidget.FormBuild(ltjq, lthlpr, ltwbo, ltwo);
-})();
-</script>
+<style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="//localhost:8080/Areas/Widgets/Content/widget.css"> <link rel="stylesheet" href="//localhost:8080/Areas/Widgets/Content/lt-captcha.css"> <div id="ltWidgetWrapper_f52658"></div> <div id="ltWidgetResultWrapper_r52796"></div> <script type="text/javascript" src="//localhost:8080/Scripts/lib/jquery-1/jquery.min.js"></script> <script type="text/javascript" src="//localhost:8080/Scripts/lib/jquery/jquery.placeholder.min.js"></script> <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/post-object/contact.js"></script> <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/post-object/deposit.js"></script> <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/common/lt-captcha.js"></script> <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/common/widget-helpers.js"></script> <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/widget/widget.js"></script> <script type="text/javascript"> (function () { var ltjq = ltjq || jQuery.noConflict(true); var lthlpr = new LoanTekWidget.helpers(ltjq); var pdfun = function () { /*code ran after DOM created*/ }; var ev = function () { return true; }; var ltwbof52658 = { "panelTitle": "Deposit Rates", "fields": [ { "field": "deposittermdd", "cols": 6 }, { "field": "depositamountdd", "cols": 6 }, { "field": "submit" } ], "widgetType": "deposit", "formWidthUnit": "px", "formBorderType": "panel", "formWidth": 500, "formBg": "#def", "formBorderColor": "#08f", "formBorderRadius": 0, "formTitleColor": "#ddf", "formTitleBgColor": "#06d", "formGroupSpacing": 4, "formFieldBorderRadius": 0, "fieldSize": "sm", "formButtonBorderRadius": 0, "postDOMCallback": pdfun, "uniqueQualifier": "f52658" }; var ltwof52658 = { "postUrl": "http://clients-pricing-api-wa1.LoanTek.com/v1.0/Deposit/N05KN3YraUFwZ0Y5bWhKYjZEVGhIa0ZvWjlpWmljcXNMNjBrN05rUTg4SEZpL1BjUUNHNktzeDY5c3Rjb0E0c0FBPT01/ApyRequest", "externalValidatorFunction": ev, "clientId": 5, "userId": 1940, "resultDisplayOptions": { "fieldSize": "sm", "fields": [ { "field": "nodatamessage" }, { "field": "depositdatalist", "fieldListOptions": { "fields": [ { "field": "label", "cols": 3, "value": "APY", "fontSize": 16 }, { "field": "api", "cols": 3, "value": "#{APY}%", "color": "#5384bf", "fontSize": 16 }, { "field": "label", "cols": 3, "value": "Amount Plus Interest" }, { "field": "amountplusinterest", "cols": 3, "value": "$#{AmountPlusInterest}", "color": "#50be67", "fontSize": 20 }, { "field": "label", "cols": 3, "value": "Base Rate", "fontSize": 16 }, { "field": "baserate", "cols": 3, "fontSize": 16, "color": "#5384bf" }, { "field": "label", "value": "Total Interest Earned", "cols": 3 }, { "field": "totalinterestearned", "cols": 3, "value": "$#{TotalInterestEarned}", "fontSize": 20, "color": "#50be67" }, { "field": "label", "cols": 3, "fontSize": 16, "value": "Final Rate" }, { "field": "finalrate", "cols": 3, "fontSize": 16, "color": "#5384bf" } ], "fieldSize": "sm", "formBorderType": "panel", "formBg": "#def", "formBorderColor": "#08f", "formGroupSpacing": 2, "formBorderRadius": 0 } } ], "widgetType": "deposit", "formWidthUnit": "px", "formWidth": 500, "uniqueQualifier": "r52796" } }; var ltwfbf52658 = new LoanTekWidget.FormBuild(ltjq, lthlpr, ltwbof52658, ltwof52658); })(); </script>
