Part of buildscript moved to widget-helpers.ts

--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -42,6 +42,15 @@
       "placeholder": "Custom Input"
     },
     {
+    	"field": "emailwidget",
+    	"widgetInfo": {
+    		"url": "urlForEmailWidget",
+    		"ClientId": 5,
+    		"UserId": 1940,
+			"formObject": {"name":"Well Well","buildObject":{"panelTitle":"Find Out More","fields":[{"field":"label","cols":4,"value":"First Name"},{"field":"firstname","cols":8},{"field":"label","value":"Last Name","cols":4},{"field":"lastname","cols":8},{"field":"label","cols":4,"value":"Email"},{"field":"email","cols":8},{"field":"label","value":"Phone Number","cols":4},{"field":"phone","cols":8},{"field":"label","cols":4,"value":"Company"},{"field":"company","cols":8},{"field":"label","cols":4,"value":"State"},{"field":"state","cols":8},{"field":"label","cols":4,"value":"Comments"},{"field":"comments","cols":8},{"field":"label","cols":4,"value":"Custom Field"},{"field":"custominput","attrs":[{"name":"data-lt-additional-info-key","value":"MyCustomInput"}],"cols":8,"placeholder":"Custom Input"},{"field":"label","cols":4,"value":"Security Check"},{"field":"captcha","cols":8},{"field":"successmessage","cols":8,"offsetCols":4},{"field":"submit","cols":8,"offsetCols":4},{"field":"customhidden","attrs":[{"name":"data-lt-additional-info-key","value":"MySpecialValue"}],"value":"test"}],"widgetType":"contact","formBorderType":"well"}}
+    	}
+    },
+    {
       "field": "submit"
     },
     {
