--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -10,10 +10,12 @@
 <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/common/lt-captcha.js"></script>
 <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/common/widget-helpers.js"></script>
 <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/widget/widget.js"></script>
+<script type="text/javascript">
+		var ltw_ltjq = ltw_ltjq || jQuery.noConflict(true);
+		var ltw_lthlpr = new LoanTekWidget.helpers(ltw_ltjq);
+</script>
 						<script type="text/javascript">
 						(function () {
-					var ltjq = ltjq || jQuery.noConflict(true);
-					var lthlpr = new LoanTekWidget.helpers(ltjq);
 						var pdfun = function () {
 							/*code ran after DOM created*/
 						};
@@ -43,10 +45,14 @@
     },
     {
     	"field": "emailwidget",
+    	// "cols": 6,
     	"widgetInfo": {
     		"url": "urlForEmailWidget",
     		"ClientId": 5,
     		"UserId": 1940,
+    		// "scripts": ["/Scripts/lib/jquery-1/jquery.min.js", "/Scripts/lib/jquery/jquery.placeholder.min.js"],
+    		// "wwwRoot": "http://localhost:8080",
+    		// "initialScript": "<script type=\"text/javascript\">var ltjq#{uniqueNew} = ltw_ltjq;var lthlpr#{uniqueNew} = new LoanTekWidget.helpers(ltjq#{uniqueNew});<\/script>",
 			"formObject": {"name":"Well Well","buildObject":{"panelTitle":"Find Out More","fields":[{"field":"label","cols":4,"value":"First Name"},{"field":"firstname","cols":8},{"field":"label","value":"Last Name","cols":4},{"field":"lastname","cols":8},{"field":"label","cols":4,"value":"Email"},{"field":"email","cols":8},{"field":"label","value":"Phone Number","cols":4},{"field":"phone","cols":8},{"field":"label","cols":4,"value":"Company"},{"field":"company","cols":8},{"field":"label","cols":4,"value":"State"},{"field":"state","cols":8},{"field":"label","cols":4,"value":"Comments"},{"field":"comments","cols":8},{"field":"label","cols":4,"value":"Custom Field"},{"field":"custominput","attrs":[{"name":"data-lt-additional-info-key","value":"MyCustomInput"}],"cols":8,"placeholder":"Custom Input"},{"field":"label","cols":4,"value":"Security Check"},{"field":"captcha","cols":8},{"field":"successmessage","cols":8,"offsetCols":4},{"field":"submit","cols":8,"offsetCols":4},{"field":"customhidden","attrs":[{"name":"data-lt-additional-info-key","value":"MySpecialValue"}],"value":"test"}],"widgetType":"contact","formBorderType":"well"}}
     	}
     },
@@ -169,6 +175,6 @@
     "uniqueQualifier": "R32641"
   }
 };
-						var ltwfbF32374 = new LoanTekWidget.FormBuild(ltjq, lthlpr, ltwboF32374, ltwoF32374);
+						var ltwfbF32374 = new LoanTekWidget.FormBuild(ltw_ltjq, ltw_lthlpr, ltwboF32374, ltwoF32374);
 						})();
 						</script>
