--- a/test/deposit_widget/index.html
+++ b/test/deposit_widget/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<nav>
-		<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar navbar-inverse navbar-fixed-topZ">
 			<div class="container">
 				<div class="navbar-header">
 					<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar">
