--- a/test/metronic/index.html
+++ b/test/metronic/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 	<title>Metronic Test</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=all" rel="stylesheet" type="text/css"/>
+	<script type="text/javascript" src="/Scripts/lib/shim/es5-shim.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/Content/font-awesome.min.css" />
+	<!-- <link href="/metronic_assets/theme/assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" /> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css"> -->
+	<link rel="stylesheet" href="/Content/simple-line-icons.css" />
+	<link rel="stylesheet" type="text/css" href="/Content/site-bootstrap.css" />
+
+			<!-- <link href="/metronic_assets/theme/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" /> -->
+
+
+	<link rel="stylesheet" type="text/css" href="/metronic_assets/theme/assets/global/css/components.min.css" />
+	<link rel="stylesheet" type="text/css" href="/metronic_assets/theme/assets/global/css/plugins.min.css" />
+
+	<link rel="stylesheet" type="text/css" href="/metronic_assets/theme/assets/layouts/layout3/css/layout.min.css" />
+	<link rel="stylesheet" type="text/css" href="/metronic_assets/theme/assets/layouts/layout3/css/themes/default.min.css" />
+	<link rel="stylesheet" type="text/css" href="/metronic_assets/theme/assets/layouts/layout3/css/custom.min.css" />
+
+	<link rel="stylesheet" type="text/css" href="/Content/site.css" />
+
+	<!-- <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="/Content/lib/metronic/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="/Content/lib/metronic/global/css/components.min.css" rel="stylesheet" type="text/css"/>
 	<link href="/Content/lib/metronic/global/css/plugins.min.css" rel="stylesheet" type="text/css"/>
 	<link href="/Content/lib/metronic/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css"/>
-	<link href="/Content/lib/metronic/layouts/layout/css/themes/default.min.css" rel="stylesheet" type="text/css"/>
-	<style type="text/css">
+	<link href="/Content/lib/metronic/layouts/layout/css/themes/default.min.css" rel="stylesheet" type="text/css"/> -->
+	<!-- <style type="text/css">
 		body {
 			margin-top:75px;
 		}
@@ -24,10 +43,120 @@
 		.logo img {
 			max-height: 50px;
 		}
+	</style> -->
+	<style type="text/css">
+		.page-header .page-header-top .page-logo .logo-lt {
+			margin-top:4px;
+			max-height: 66px;
+		}
+		.dropdown-menu-fade {
+			display: block;
+			visibility: hidden;
+			opacity: 0;
+			transition: all 0.4s;
+			/*max-height: 0px;
+			overflow: hidden;*/
+		}
+		.navbar-nav > li.menu-dropdown:hover > .dropdown-menu-fade, .open > .dropdown-menu-fade {
+			visibility: visible;
+			opacity: 1;
+			/*max-height: 400px;*/
+		}
 	</style>
 </head>
-<body>
-	<div class="page-header navbar navbar-fixed-top lt-navbar-top">
+<body class="page-container-bg-solid page-header-menu-fixed">
+	<div class="page-wrapper">
+		<div class="page-wrapper-row">
+			<div class="page-wrapper-top">
+				<div class="page-header">
+					<div class="page-header-top">
+						<div class="container">
+							<div class="page-logo">
+								<a href="/">
+									<img class="logo-lt" src="/Content/images/logo-loantek.com-500px.png" alt="LoanTek" />
+								</a>
+							</div>
+							<a href="javascript:;" class="menu-toggler"></a>
+							<div class="top-menu">
+								<ul class="nav navbar-nav pull-right">
+									<li class="dropdown dropdown-user dropdown-dark">
+										<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+											<span class="username username-hide-mobile">Welcome Joe <i class="caret"></i></span>
+										</a>
+										<ul class="dropdown-menu dropdown-menu-default dropdown-menu-fade">
+											<li><a href="#"><i class="icon-user"></i> Account</a></li>
+											<li><a href="#"><i class="icon-support"></i> Support</a></li>
+											<li><a href="#"><i class="icon-reload"></i> Reload Settings</a></li>
+											<li><a href="#"><i class="icon-logout"></i> Sign Off</a></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="page-header-menu">
+						<div class="container">
+							<div class="hor-menu">
+								<ul class="nav navbar-nav">
+									<li class="menu-dropdown classic-menu-dropdown">
+										<a href="javascript:;">Websites <span class="caret"></span></a>
+										<ul class="dropdown-menu dropdown-menu-fade pull-left">
+											<li><a href="#" class="nav-link"><i class="icon-home"></i> Home</a></li>
+											<li><a href="#" class="nav-link"><i class="icon-link"></i> Clients.LoanTek.com</a></li>
+											<li><a href="#" class="nav-link"><i class="icon-link"></i> www.LoanTek.com</a></li>
+										</ul>
+									</li>
+									<li class="menu-dropdown classic-menu-dropdown">
+										<a href="javascript:;">Quoting <span class="caret"></span></a>
+										<ul class="dropdown-menu dropdown-menu-fade pull-left">
+											<li><a href="#" class="nav-link">Preferences</a></li>
+											<li><a href="#" class="nav-link">Reporting</a></li>
+											<li><a href="#" class="nav-link">Widgets</a></li>
+											<li><a href="#" class="nav-link">API(s)</a></li>
+										</ul>
+									</li>
+									<li class="menu-dropdown classic-menu-dropdown">
+										<a href="javascript:;">CRM <span class="caret"></span></a>
+										<ul class="dropdown-menu dropdown-menu-fade pull-left">
+											<li><a href="#" class="nav-link">Bulk Importer</a></li>
+											<li><a href="#" class="nav-link">Widgets</a></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<!--
+							.container>.hor-menu>ul.nav.navbar-nav>li.menu-dropdown.classic-menu-dropdown*3>a[href=javascript:;]{Menu$ }>span.caret^ul.dropdown-menu.pull-left>li*3>a.nav-link[href=#]{Link$}
+						 -->
+						<!--
+							li.menu-dropdown.classic-menu-dropdown>a[href=javascript:;]{Menu$ }>span.caret^ul.dropdown-menu.pull-left>li*3>a.nav-link[href=#]{Link$}
+						-->
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="page-wrapper-row full-height">
+			<div class="page-wrapper-middle">
+				<div class="container">
+					<p>Content Goes Here!!</p>
+					<p style="height: 600px; width: 200px; background-color: #eee">lorem</p>
+				</div>
+			</div>
+		</div>
+		<div class="page-wrapper-row">
+			<div class="page-wrapper-bottom">
+				<div class="page-footer">
+					<div class="container">
+						<div class="text-center">
+							&copy; 2016 - LoanTek | 1020 West Main Street, Suite 270, Boise, Idaho 83702<br /><br />
+							Support: <a href="mailto:support@loantek.com">support@loantek.com</a> | Call Us: <a href="tel:1-888-562-6835">1-888-562-6835</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="page-header navbar navbar-fixed-top lt-navbar-top">
 		<div class="page-header-inner container">
 			<div class="navbar-header">
 				<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar">
@@ -39,6 +168,19 @@
 				<a href="/" class="navbar-brand logo" alt="LoanTek, a Bankrate company" title="LoanTek, a Bankrate company"><img src="https://www.loantek.com/assets/img/logo-loantek.com_invert.png" alt="" /></a>
 			</div>
 		</div>
-	</div>
+	</div> -->
+	<script type="text/javascript" src="/Scripts/lib/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/Scripts/lib/jquery/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/Scripts/lib/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/Scripts/respond.js"></script>
+
+	<!-- <script src="/metronic_assets/theme/assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
+	<script src="/metronic_assets/theme/assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+	<script src="/metronic_assets/theme/assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+	<script src="/metronic_assets/theme/assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script> -->
+
+	<script type="text/javascript" src="/metronic_assets/theme/assets/global/scripts/app.min.js"></script>
+
+	<script type="text/javascript" src="/metronic_assets/theme/assets/layouts/layout3/scripts/layout.js"></script>
 </body>
 </html>
